Upgrade JDK to v11 and fix deprecated functions